check for no graphs in spatial request